--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,6 @@ flutter:
   #         weight: 700
   #
   assets:
-    - assets/images
+      - assets/images/
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
