--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
 dependencies:
+
   flutter:
     sdk: flutter
 
@@ -28,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_search_bar: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -76,3 +79,5 @@ flutter:
       - assets/images/
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
