--- a/android/.gitignore
+++ b/android/.gitignore
@@ -10,4 +10,5 @@ GeneratedPluginRegistrant.java
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 key.properties
 
-android/app/upload-keystore.jks
+app/upload-keystore.jks
+app/build.gradle
