--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_search_bar: ^2.1.0
   websafe_svg: ^2.0.0
+  provider: ^5.0.0
+  http: ^0.13.3
+  geolocator: ^7.1.0
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
