--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.13.3
   geolocator: ^7.1.0
   cached_network_image: ^3.0.0
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
