--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   geolocator: ^7.1.0
   cached_network_image: ^3.0.0
   auto_size_text: ^2.1.0
+  share_plus: ^2.1.2
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
