--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   auto_size_text: ^2.1.0
   share_plus: ^2.1.2
   url_launcher: ^6.0.6
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
