--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   share_plus: ^2.1.2
   url_launcher: ^6.0.6
   package_info: ^2.0.2
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
